2009-09-01  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2847757 ] local cim client execQuery leak

2009-08-31 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/ABT/ABTScript:
	[2845131] Add summary.html to uploaded results

2009-08-26  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2844812 ] CMPIConnect2 doesn't init CMPIStatus completely
	(fix by Klaus Kampf)

2009-08-25 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* control.c, sfcb.cfg.pre.in, sfcBroker.c:
	[2840384] Have httpAdapter not run as root

2009-08-25 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* configure.ac, test/slptest/slpTest.sh, test/slptest/Makefile.am
	[2844044] Script to test slp functionality

2009-08-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c, providerRegister.c, providerRegister.h, 
	sfcb.cfg.pre.in, control.c, README:
	[2840374] Specify user for provider processes

2009-08-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 2841419 ] Memory leak during chunked ec call

2009-08-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerDrv.c, providerRegister.c, providerRegister.h:
	[2840374] Specify user for provider processes

2009-08-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* context.c:
	[2833542] Possible leak in CMPIContext addEntry
	(based on patch from Gokul)

2009-08-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, mlog.c, mlog.h:
	[2833403] sfcc calls unable to log

2009-08-05  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* cimXmlGen.c
	[ 2727830 ] No valid variable in error message in cimXmlGen.c 

2009-07-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2825221 ] No validation for PersistenceType property
	(take 2)

	* test/xml/indCIMXMLHandler-verify_PersistenceType.*
	Test for above fix

2009-07-28  Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* cimXmlGen.c: