@@ -1,3 +1,9 @@
+2009-09-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* interopProvider.c:
+	[2791613] interop provider gives invalid error while creating instance
+	(based on patch from Gokul)
+
 2009-09-01  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* cimcClientSfcbLocal.c:
